# ADS-search-engine

./: .gitignore  ADS_search_engine.cpp  CMakeLists.txt  README.md  main.cpp  word_count.txt
example/: allswell_count.txt
include/: FileIndex.h  SearchEngine.h  StopFilter.h  WordCounter.h  utils.h
src/: FileIndex.cpp  SearchEngine.cpp  StopFilter.cpp  WordCounter.cpp  utils.cpp
stmr/: stmr.c  stmr.h
test/: file_index_test.cpp  search_engine_test.cpp  stop_filter_test.cpp  stop_words.txt  tests.cpp  tests.h  word_count_test.cpp
test/output/: build_and_print_index_test.txt  save_and_read_index_test1.txt  save_and_read_index_test2.txt  search_engine_load_and_search.txt  word_count_test.txt
